--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <li>Add all the ingredients into a food processor</li>
     <li>Process all the ingredients into a paste.</li>
     <ul>
-    <li>If you want a coarse "chunky" hummus, process it for a short time
-    <li>If you want a smooth hummus, process it for a longer time
+    <li>If you want a coarse "chunky" hummus, process it for a short time</li>
+    <li>If you want a smooth hummus, process it for a longer time</li>
     </ul>
     </ol>
 
